--- a/v19.11/test-pmd/Makefile
+++ b/v19.11/test-pmd/Makefile
@@ -34,6 +34,10 @@ SRCS-y += txonly.c
 SRCS-y += csumonly.c
 SRCS-y += icmpecho.c
 SRCS-y += noisy_vnf.c
+SRCS-y += hashring.c
+SRCS-y += hashget.c
+SRCS-y += lbfwd.c
+SRCS-y += lb_listen.c
 SRCS-$(CONFIG_RTE_LIBRTE_IEEE1588) += ieee1588fwd.c
 SRCS-$(CONFIG_RTE_LIBRTE_BPF) += bpf_cmd.c
 SRCS-y += util.c
